--- a/templates/main.html
+++ b/templates/main.html
@@ -12,11 +12,11 @@
 		<label for="menu-toggle" class="menu-trigger">Menu</label>
 		<nav class="main-menu">
 			<ul>
-				<li>Home</li>
-				<li>Experiment A</li>
-				<li>Experiment B</li>
-				<li>Privacy Policy</li>
-				<li>Imprint</li>
+				<li><a href="/">Home</a></li>
+				<li><a href="/experiment-a/">Experiment A</a></li>
+				<li><a href="/experiment-b/">Experiment B</a></li>
+				<li><a href="/privacy-policy/">Privacy Policy</a></li>
+				<li><a href="/imprint/">Imprint</a></li>
 			</ul>
 		</nav>
 	</header>
