working face detection

--- a/templates/main.html
+++ b/templates/main.html
@@ -2,12 +2,13 @@
 <!-- cspell:disable -->
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width">
 	<meta charset="UTF-8">
 	<title></title>
 	<link rel="stylesheet" href="/static/main.css">
 </head>
 <body class="striped main-grid">
-	<input type="checkbox" id="menu-toggle" checked/>
+	<input type="checkbox" id="menu-toggle" />
 	<header class="main-header">
 		<label for="menu-toggle" class="menu-trigger">Menu</label>
 		<nav class="main-menu">
