--- a/content/static/main.css
+++ b/content/static/main.css
@@ -27,7 +27,7 @@ body {
 .main-grid {
 	display: grid;
 	grid-template-columns: 2rem 1fr 2rem;
-	grid-template-rows: minmax(4rem, auto) 2rem auto 2rem;
+	grid-template-rows: minmax(4rem, auto) 2rem 1fr 2rem;
 
 	grid-template-areas:
 		"menu menu menu"
@@ -151,6 +151,7 @@ main {
 
 .main-menu a {
 	text-decoration: none;
+	color: var(--text);
 }
 
 .main-menu a:visited {
@@ -191,4 +192,25 @@ main {
 		border-bottom: none;
 	}
 
+}
+
+video, canvas {
+	width: 100%;
+	display: block;
+}
+
+.video-canvas {
+	position: relative;
+}
+
+.video-canvas video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 0;
+}
+
+.video-canvas canvas {
+	position: relative;
+	z-index: 10;
 }
