--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
 	<title></title>
 	<link rel="stylesheet" href="/static/main.css">
 </head>
-<body class="striped main-grid">
+<body class="main-grid">
 	<input type="checkbox" id="menu-toggle" />
 	<header class="main-header">
 		<label for="menu-toggle" class="menu-trigger">Menu</label>
