--- a/content/static/main.css
+++ b/content/static/main.css
@@ -7,6 +7,7 @@
 	--color-blue-light: #AFC8DB;
 	--color-orange-heavy: #EC6408;
 	--color-blue-heavy: #618AAC;
+	--color-teal: #00779E;
 	--color-orange-light: #F7AF7E;
 	--color-yellow-faded: #C69F33;
 
@@ -29,12 +30,12 @@ html {
 
 
 body {
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 	max-width: 60rem;
 	min-height: 100vh;
 
-	background-color: var(--color-white);
+	background-color: var(--color-teal);
 }
 /* end: page basics */
 
@@ -48,7 +49,7 @@ img {
 
 /* begin: content elements */
 .container {
-	padding: 1rem;
+	padding: 1rem 2rem;
 }
 .container > *:first-child {
 	margin-top: 0;
@@ -63,8 +64,6 @@ main header {
 }
 
 main section {
-	background-color: var(--color-white);
-	color: var(--color-black);
 }
 /* end: content elements */
 
@@ -73,12 +72,15 @@ main section {
 .main-grid {
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: minmax(4rem, auto) 1fr 2rem;
+	grid-template-rows: minmax(4rem, auto) 1fr 2rem min-content 2rem;
 
 	grid-template-areas:
 		"menu"
 		"main"
+		".   "
+		"footer"
 		".   ";
+
 }
 
 
@@ -87,6 +89,15 @@ main {
 	display: flex;
 	flex-direction: column;
 	/*gap: 2rem;*/
+	padding-bottom: 1rem;
+	background-color: var(--color-white);
+	color: var(--color-black);
+}
+
+.main-footer {
+	grid-area: footer;
+	background-color: var(--color-white);
+	padding: 1rem 2rem;
 }
 /* end: grid structure */
 
@@ -95,7 +106,6 @@ main {
 .main-header {
 	grid-area: menu;
 	padding: 1rem 2rem;
-	background-color: var(--color-white);
 	position: sticky;
 	top: 0;
 	left: 0;
@@ -103,7 +113,8 @@ main {
 
 	display: flex;
 	flex-direction: column;
-	color: var(--color-black);
+	align-items: flex-end;
+	background-color: var(--color-teal);
 
 	z-index: 100;
 }
@@ -149,6 +160,8 @@ main {
 	display: flex;
 	flex-direction: column;
 	row-gap: 1rem;
+
+	align-items: flex-end;
 }
 
 .main-menu ul li {
@@ -157,7 +170,12 @@ main {
 .main-menu a,
 .main-menu a:visited {
 	text-decoration: none;
-	color: var(--color-black);
+	color: var(--color-white);
+	font-weight: 600;
+}
+
+.main-menu a.active {
+	color: var(--color-orange-heavy);
 }
 /* end: header and menu */
 
@@ -268,92 +286,49 @@ main {
 .launcher {
 	aspect-ratio: calc(1/1);
 	display: grid;
-	grid-template-rows: repeat(8, 12.5%);
-	grid-template-columns: repeat(8, 12.5%);
-	background-color: var(--color-blue-heavy);
+	grid-template-rows: auto min-content;
+	grid-template-columns: 1fr;
+	background-color: var(--color-white);
+}
+
+.launcher .cover {
 	background-size: cover;
 	background-position: center center;
 }
 
+.launcher .info {
+	padding: 2rem;
+}
+
+.launcher .info h2 {
+	margin-top: 0;
+}
+
 .launcher button {
-
-	grid-area: 7 / 6 / 8 / 8 ;
-	font-size: 2rem;
-	padding: 1rem;
-	background-color: var(--color-orange-heavy);
-	border: 1px solid var(--color-orange-light);
+	background-color: var(--color-teal);
+	border: 1px solid var(--color-blue-heavy);
 	color: var(--color-white);
+
+	font-size: 1.4rem;
+	padding: 0.5rem 1rem;
+	font-weight: 500;
+	text-transform: uppercase;
 	cursor: pointer;
-
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	gap: 1rem;
 }
 
-.launcher button::after {
-	content: "";
-	display: inline-block;
-	width: 2rem;
-	height: 2rem;
-	background-color: var(--color-white);
-	clip-path: polygon(0 0, 100% 50%, 0 100%);
-
+.launcher button:hover {
+	background-color: var(--color-blue-light);
+	color: var(--color-teal);
 }
 
-#experiment-a .launcher {
+#experiment-a .launcher .cover {
 	background-image: url(/assets/bg-image-1.jpg);
 }
-#experiment-b .launcher {
+#experiment-b .launcher .cover {
 	background-image: url(/assets/bg-image-2.jpg);
 }
 
-.launcher div, .launcher h1 {
-	background-color: var(--color-black);
-	padding: 1rem 2rem;
-	margin: 0;
-	color: var(--color-white);
-	font-size: 1.2rem;
 
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-}
-
-.launcher div:nth-child(1) {
-	grid-area: 2 / 2 / 2 / 8;
-	clip-path: polygon(
-		0 0,
-		calc(100% - 2rem) 0,
-		100% 2rem,
-		100% 100%,
-		0 100%
-	);
-}
-
-.launcher div:nth-child(2) {
-	grid-area: 4 / 4 / 4 / 8;
-	justify-content: flex-end;
-	clip-path: polygon(
-		1rem 0,
-		100% 0,
-		100% 100%,
-		0 100%,
-		0 1rem
-	);
-}
-
-.launcher div:nth-child(3) {
-	grid-area: 7 / 2 / 7 / 5;
-	font-size: 2rem;
-	clip-path: polygon(
-		0 0,
-		100% 0,
-		100% calc(100% - 1rem),
-		calc(100% - 1rem) 100%,
-		0 100%
-	);
-}
 
 /* end: launcher */
 
@@ -395,16 +370,17 @@ canvas.reference {
 	width: 100%;
 }
 
+.teaser {
+	margin-bottom: 2rem;
+}
+
 .teaser img {
-	aspect-ratio: calc(3/2);
+	aspect-ratio: calc(4/2);
 	object-fit: cover;
 	object-position: center center;
 }
 
 @media (min-width: 24rem) {
-	.launcher div, .launcher h1 {
-		font-size: 3rem;
-	}
 	.hint {
 		grid-template-rows: 2rem auto;
 		grid-template-columns: min(16rem, 30%) auto;
@@ -416,12 +392,15 @@ canvas.reference {
 
 @media (min-width: 50rem) {
 	.main-grid {
-		grid-template-columns: 12rem 1fr;
-		grid-template-rows :auto 2rem;
+		grid-template-columns: 2rem 1fr 2rem;
+		grid-template-rows : 6rem auto 2rem min-content 2rem;
 
 		grid-template-areas:
-			"menu main"
-			"menu .   ";
+			". menu   ."
+			". main   ."
+			". .      ."
+			". footer ."
+			". .      .";
 	}
 
 	.menu-trigger {
@@ -431,16 +410,30 @@ canvas.reference {
 	.main-menu {
 		max-height: initial;
 		overflow: initial;
+
+		width: 100%;
+		height: 100%;
+	}
+
+	.main-menu ul {
+		width: 100%;
+		height: 100%;
+		flex-direction: row;
+		justify-content: flex-end;
+		align-items: center;
+		gap: 2rem;
 	}
 
 	.main-header {
-		padding-top: 2rem;
-		border-bottom: none;
-		background-color: var(--color-white);
-		background-image: url(/assets/menu-bg.png);
+		position: static;
+		padding: 0;
+		border: none;
+		background-color: var(--color-teal);
 		background-size: cover;
 		background-position: bottom left;
 		background-repeat: no-repeat;
+
+		color: var(--color-white);
 	}
 }
 
