--- a/templates/main.html
+++ b/templates/main.html
@@ -25,13 +25,7 @@
 		{{content}}
 	</main>
 
-	<footer class="main-footer">
-		<h2>Kooperationspartner</h2>
-		<ul>
-			<li>Alexander von Humboldt Institute for Internet and Society</li>
-			<li>neuland und gestalten</li>
-		</ul>
-	</footer>
+	{{footer}}
 
 	<script type="application/javascript">
 		const menuLinks = Array.from(document.querySelectorAll(".main-menu a"))
