responsive layout fixes

--- a/templates/main.html
+++ b/templates/main.html
@@ -27,6 +27,8 @@
 
 	{{footer}}
 
+	<script type="application/javascript" src="/static/misc.js"></script>
+
 	<script type="application/javascript">
 		const menuLinks = Array.from(document.querySelectorAll(".main-menu a"))
 		const urlPath = document.location.pathname
