--- a/content/static/main.css
+++ b/content/static/main.css
@@ -42,6 +42,14 @@ body {
 
 /* begin: basic elements */
 
+a {
+	color: var(--color-teal);
+}
+
+a:visited {
+	color: var(--color-blue-heavy);
+}
+
 h1, h2, h3 {
 	font-weight: 500;
 }
@@ -317,7 +325,9 @@ main {
 
 /* begin: launcher */
 .launcher {
-	aspect-ratio: calc(1/1);
+	aspect-ratio: calc(2/3);
+	width: 100%;
+	max-height: calc(100vh - 6rem);
 	display: grid;
 	grid-template-rows: auto min-content;
 	grid-template-columns: 1fr;
@@ -331,6 +341,7 @@ main {
 
 .launcher .info {
 	padding: 2rem;
+	display: grid
 }
 
 .launcher .info h2 {
@@ -362,8 +373,42 @@ main {
 }
 
 
+.launcher .controls {
+	display: grid;
+	grid-template-rows: auto auto;
+	grid-template-columns: auto;
+	gap: 1rem;
+	justify-items: stretch;
+	align-items: baseline;
+}
+
+.launcher .controls a {
+	text-align: right;
+}
 
 /* end: launcher */
+
+.icon-help {
+	display: grid;
+	grid-template-rows: 1fr;
+	grid-template-columns: min-content 1fr;
+	gap: 1rem;
+	align-items: center;
+}
+
+.icon-help .icon {
+	width: 2rem;
+	height: 2rem;
+	background-color: var(--color-orange-heavy);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.icon-help .icon img {
+	width: 1.5rem;
+	height: 1.5rem;
+}
 
 .hint {
 	display: grid;
@@ -414,12 +459,25 @@ canvas.reference {
 }
 
 @media (min-width: 24rem) {
+	.launcher {
+	  aspect-ratio: calc(1/1);
+	}
+
 	.hint {
 		grid-template-rows: 2rem auto;
 		grid-template-columns: min(16rem, 30%) auto;
 		grid-template-areas:
 			"image heading"
 			"image inner";
+	}
+
+}
+
+@media (min-width: 32rem) {
+
+	.launcher .controls {
+		grid-template-rows auto;
+		grid-template-columns: minmax(auto, 22rem) auto;
 	}
 }
 
@@ -468,6 +526,7 @@ canvas.reference {
 
 		color: var(--color-white);
 	}
+
 }
 
 
