--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,8 @@
 <footer class="main-footer">
 	<h2>Kooperationspartner</h2>
 	<ul class="co-ops">
-		<li class="hiig">Alexander von Humboldt Institute for Internet and Society</li>
-		<li class="nug">neuland und gestalten</li>
+		<li><a class="hiig" href="https://www.hiig.de">Alexander von Humboldt Institute for Internet and Society</a></li>
+		<li><a class="nug" href="https://www.neulandundgestalten.de">neuland und gestalten</a></li>
 	</ul>
 </footer>
 
