change experiment page URLs

--- a/templates/main.html
+++ b/templates/main.html
@@ -14,8 +14,8 @@
 		<nav class="main-menu">
 			<ul>
 				<li><a href="/">Startseite</a></li>
-				<li><a href="/experiment-a/">Gesichter finden</a></li>
-				<li><a href="/experiment-b/">Gesichter erkennen</a></li>
+				<li><a href="/gesichter-finden/">Gesichter finden</a></li>
+				<li><a href="/gesichter-erkennen/">Gesichter erkennen</a></li>
 				<li><a href="https://www.hiig.de/datenschutzerklaerung/">Datenschutz</a></li>
 				<li><a href="https://www.hiig.de/impressum/">Impressum</a></li>
 			</ul>
