Footer Menu Mobile

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,21 @@
 <footer class="main-footer">
-	<h2>Kooperationspartner</h2>
-	<ul class="co-ops">
-		<li><a class="hiig" href="https://www.hiig.de">Alexander von Humboldt Institute for Internet and Society</a></li>
-		<li><a class="nug" href="https://www.neulandundgestalten.de">neuland und gestalten</a></li>
-	</ul>
+  <a class="title" href="/"><span>KI Menschlich erklärt</span></a>
+  <ul class="legal-menu">
+    <li>
+      <a
+        target="_blank"
+        rel="noreferrer nopener nofollow"
+        href="https://www.hiig.de/datenschutzerklaerung/"
+        >Datenschutz</a
+      >
+    </li>
+    <li>
+      <a
+        target="_blank"
+        rel="noreferrer nopener nofollow"
+        href="https://www.hiig.de/impressum/"
+        >Impressum</a
+      >
+    </li>
+  </ul>
 </footer>
-
