--- a/templates/main.html
+++ b/templates/main.html
@@ -1,46 +1,34 @@
 <!DOCTYPE html>
 <!-- cspell:disable -->
 <html lang="en">
-<head>
-	<meta name="viewport" content="width=device-width">
-	<meta charset="UTF-8">
-	<title></title>
-	<link rel="stylesheet" href="/static/main.css">
-</head>
-<body class="main-grid">
-	<input type="checkbox" id="menu-toggle" />
-	<header class="main-header">
-		<label for="menu-toggle" class="menu-trigger">Menu</label>
-		<nav class="main-menu">
-			<ul>
-				<li><a href="/">Startseite</a></li>
-				<li><a href="/gesichter-finden/">Gesichter finden</a></li>
-				<li><a href="/gesichter-erkennen/">Gesichter erkennen</a></li>
-				<li><a href="https://www.hiig.de/datenschutzerklaerung/">Datenschutz</a></li>
-				<li><a href="https://www.hiig.de/impressum/">Impressum</a></li>
-			</ul>
-		</nav>
-	</header>
-	<main>
-		{{content}}
-	</main>
-
-	{{footer}}
-
-	<script type="application/javascript" src="/static/misc.js"></script>
-
-	<script type="application/javascript">
-		const menuLinks = Array.from(document.querySelectorAll(".main-menu a"))
-		const urlPath = document.location.pathname
+  <head>
+    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8" />
+    <title>KI Experimente – KI menschlich erklärt</title>
+    <link rel="stylesheet" href="/static/main.css" />
+  </head>
+  <body class="main-grid">
+    
+		{{menu}}
 		
-		menuLinks.forEach(link => {
-			console.log(link.getAttribute("href"), urlPath)
-			if (link.getAttribute("href") == urlPath) {
-				link.classList.add("active")
-			}
-		})
-	</script>
-	
-</body>
-</html>
+    <main>{{content}}</main>
 
+    {{footer}}
+
+    <script type="application/javascript" src="/static/misc.js"></script>
+
+    <script type="application/javascript">
+      const menuLinks = Array.from(document.querySelectorAll(".main-menu a"));
+      const urlPath = document.location.pathname;
+
+      menuLinks.forEach((link) => {
+        console.log(link.getAttribute("href"), urlPath);
+        if (link.getAttribute("href") == urlPath) {
+          link.classList.add("active");
+        }
+      });
+    </script>
+
+    <!-- TODO: Add Matomo -->
+  </body>
+</html>
